Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7756,7 +7756,15 @@
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 44.81534090909091\tLoss: 12.381\n",
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 19.105113636363637\tLoss: 114.961\n",
       "count: 332\tCoord: [0.7 0.5]\t\tAcc: 11.079545454545455\tLoss: 2086.848\n",
-      "Coord: [0.8 0.5]\tAcc: 21\tLoss: 7086.2326\r"
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 9.872159090909092\tLoss: 38515.825\n",
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 9.232954545454545\tLoss: 4.606\n",
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 11.71875\tLoss: 3.264\n",
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 17.1875\tLoss: 3.1\n",
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 27.911931818181817\tLoss: 3.287\n",
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 48.22443181818182\tLoss: 3.901\n",
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 55.25568181818182\tLoss: 5.816\n",
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 43.60795454545455\tLoss: 11.642\n",
+      "Coord: [0.4 0.6]\tAcc: 33\tLoss: 50.578\r"
      ]
     }
    ],
