Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7764,7 +7764,8 @@
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 48.22443181818182\tLoss: 3.901\n",
       "count: 346\tCoord: [0.  0.6]\t\tAcc: 55.25568181818182\tLoss: 5.816\n",
       "count: 348\tCoord: [0.2 0.6]\t\tAcc: 43.60795454545455\tLoss: 11.642\n",
-      "Coord: [0.4 0.6]\tAcc: 33\tLoss: 50.578\r"
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 25.426136363636363\tLoss: 44.707\n",
+      "Coord: [0.5 0.6]\tAcc: 24\tLoss: 170.776\r"
      ]
     }
    ],
