--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7663,7 +7663,8 @@
       "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 11.505681818181818\tLoss: 4.172\n",
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 15.269886363636363\tLoss: 2.741\n",
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 33.59375\tLoss: 2.13\n",
-      "Coord: [-0.3  0.6]\tAcc: 63\tLoss: 1.994\r"
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 55.68181818181818\tLoss: 2.013\n",
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 62.42897727272727\tLoss: 3.191\n"
      ]
     }
    ],
