--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7701,7 +7701,9 @@
       "count: 252\tCoord: [-1.   0.2]\t\tAcc: 11.505681818181818\tLoss: 2.301\n",
       "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 16.974431818181817\tLoss: 2.277\n",
       "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 28.125\tLoss: 2.117\n",
-      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 61.57670454545455\tLoss: 1.243\n"
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 61.57670454545455\tLoss: 1.243\n",
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 88.35227272727273\tLoss: 0.358\n",
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 95.38352272727273\tLoss: 0.187\n"
      ]
     }
    ],
