Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7664,7 +7664,10 @@
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 15.269886363636363\tLoss: 2.741\n",
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 33.59375\tLoss: 2.13\n",
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 55.68181818181818\tLoss: 2.013\n",
-      "count: 346\tCoord: [0.  0.6]\t\tAcc: 62.42897727272727\tLoss: 3.191\n"
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 62.42897727272727\tLoss: 3.191\n",
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 46.23579545454545\tLoss: 10.594\n",
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 26.491477272727273\tLoss: 42.473\n",
+      "Coord: [0.5 0.6]\tAcc: 16\tLoss: 89.971\r"
      ]
     }
    ],
