--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7703,7 +7703,9 @@
       "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 28.125\tLoss: 2.117\n",
       "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 61.57670454545455\tLoss: 1.243\n",
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 88.35227272727273\tLoss: 0.358\n",
-      "count: 262\tCoord: [0.  0.2]\t\tAcc: 95.38352272727273\tLoss: 0.187\n"
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 95.38352272727273\tLoss: 0.187\n",
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 83.23863636363636\tLoss: 1.836\n",
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 44.81534090909091\tLoss: 14.526\n"
      ]
     }
    ],
