--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7705,7 +7705,10 @@
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 88.35227272727273\tLoss: 0.358\n",
       "count: 262\tCoord: [0.  0.2]\t\tAcc: 95.38352272727273\tLoss: 0.187\n",
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 83.23863636363636\tLoss: 1.836\n",
-      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 44.81534090909091\tLoss: 14.526\n"
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 44.81534090909091\tLoss: 14.526\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 17.68465909090909\tLoss: 40.254\n",
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 10.440340909090908\tLoss: 50.178\n",
+      "Coord: [0.9 0.2]\tAcc: 15\tLoss: 50.868\r"
      ]
     }
    ],
