Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7667,7 +7667,11 @@
       "count: 346\tCoord: [0.  0.6]\t\tAcc: 62.42897727272727\tLoss: 3.191\n",
       "count: 348\tCoord: [0.2 0.6]\t\tAcc: 46.23579545454545\tLoss: 10.594\n",
       "count: 350\tCoord: [0.4 0.6]\t\tAcc: 26.491477272727273\tLoss: 42.473\n",
-      "Coord: [0.5 0.6]\tAcc: 16\tLoss: 89.971\r"
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 14.488636363636363\tLoss: 218.014\n",
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 8.948863636363637\tLoss: 3489.426\n",
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 10.9375\tLoss: 63651.7\n",
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 10.227272727272727\tLoss: 11.306\n",
+      "Coord: [-0.8  0.7]\tAcc: 13\tLoss: 5.576\r"
      ]
     }
    ],
