--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7765,7 +7765,14 @@
       "count: 346\tCoord: [0.  0.6]\t\tAcc: 55.25568181818182\tLoss: 5.816\n",
       "count: 348\tCoord: [0.2 0.6]\t\tAcc: 43.60795454545455\tLoss: 11.642\n",
       "count: 350\tCoord: [0.4 0.6]\t\tAcc: 25.426136363636363\tLoss: 44.707\n",
-      "Coord: [0.5 0.6]\tAcc: 24\tLoss: 170.776\r"
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 11.079545454545455\tLoss: 568.718\n",
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 10.795454545454545\tLoss: 10187.867\n",
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 10.227272727272727\tLoss: 148296.438\n",
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 10.653409090909092\tLoss: 5.468\n",
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 11.647727272727273\tLoss: 3.974\n",
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 17.542613636363637\tLoss: 4.179\n",
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 31.25\tLoss: 5.343\n",
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 42.54261363636363\tLoss: 7.673\n"
      ]
     }
    ],
