--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7708,7 +7708,9 @@
       "count: 266\tCoord: [0.4 0.2]\t\tAcc: 44.81534090909091\tLoss: 14.526\n",
       "count: 268\tCoord: [0.6 0.2]\t\tAcc: 17.68465909090909\tLoss: 40.254\n",
       "count: 270\tCoord: [0.8 0.2]\t\tAcc: 10.440340909090908\tLoss: 50.178\n",
-      "Coord: [0.9 0.2]\tAcc: 15\tLoss: 50.868\r"
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 8.877840909090908\tLoss: 53.522\n",
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 13.494318181818182\tLoss: 2.293\n",
+      "Coord: [-0.8  0.3]\tAcc: 14\tLoss: 2.283\r"
      ]
     }
    ],
