--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7671,7 +7671,11 @@
       "count: 354\tCoord: [0.8 0.6]\t\tAcc: 8.948863636363637\tLoss: 3489.426\n",
       "count: 356\tCoord: [1.  0.6]\t\tAcc: 10.9375\tLoss: 63651.7\n",
       "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 10.227272727272727\tLoss: 11.306\n",
-      "Coord: [-0.8  0.7]\tAcc: 13\tLoss: 5.576\r"
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 14.488636363636363\tLoss: 3.201\n",
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 22.585227272727273\tLoss: 2.596\n",
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 37.35795454545455\tLoss: 2.471\n",
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 50.85227272727273\tLoss: 3.547\n",
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 46.37784090909091\tLoss: 7.841\n"
      ]
     }
    ],
