--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7710,7 +7710,9 @@
       "count: 270\tCoord: [0.8 0.2]\t\tAcc: 10.440340909090908\tLoss: 50.178\n",
       "count: 272\tCoord: [1.  0.2]\t\tAcc: 8.877840909090908\tLoss: 53.522\n",
       "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 13.494318181818182\tLoss: 2.293\n",
-      "Coord: [-0.8  0.3]\tAcc: 14\tLoss: 2.283\r"
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 21.59090909090909\tLoss: 2.227\n",
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 40.98011363636363\tLoss: 1.84\n",
+      "Coord: [-0.3  0.3]\tAcc: 98\tLoss: 0.727\r"
      ]
     }
    ],
