Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7712,7 +7712,9 @@
       "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 13.494318181818182\tLoss: 2.293\n",
       "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 21.59090909090909\tLoss: 2.227\n",
       "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 40.98011363636363\tLoss: 1.84\n",
-      "Coord: [-0.3  0.3]\tAcc: 98\tLoss: 0.727\r"
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 72.1590909090909\tLoss: 0.809\n",
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 89.77272727272727\tLoss: 0.368\n",
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 85.01420454545455\tLoss: 1.078\n"
      ]
     }
    ],
