Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7675,7 +7675,11 @@
       "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 22.585227272727273\tLoss: 2.596\n",
       "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 37.35795454545455\tLoss: 2.471\n",
       "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 50.85227272727273\tLoss: 3.547\n",
-      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 46.37784090909091\tLoss: 7.841\n"
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 46.37784090909091\tLoss: 7.841\n",
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 30.46875\tLoss: 27.657\n",
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 19.744318181818183\tLoss: 97.922\n",
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 9.659090909090908\tLoss: 897.078\n",
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 11.647727272727273\tLoss: 15726.813\n"
      ]
     }
    ],
