--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7772,7 +7772,16 @@
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 11.647727272727273\tLoss: 3.974\n",
       "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 17.542613636363637\tLoss: 4.179\n",
       "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 31.25\tLoss: 5.343\n",
-      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 42.54261363636363\tLoss: 7.673\n"
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 42.54261363636363\tLoss: 7.673\n",
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 39.41761363636363\tLoss: 13.427\n",
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 26.84659090909091\tLoss: 32.032\n",
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 13.991477272727273\tLoss: 189.333\n",
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 10.582386363636363\tLoss: 2717.914\n",
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 10.369318181818182\tLoss: 44204.436\n",
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 10.653409090909092\tLoss: 13.671\n",
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 10.369318181818182\tLoss: 6.78\n",
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 14.417613636363637\tLoss: 5.397\n",
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 17.542613636363637\tLoss: 7.023\n"
      ]
     }
    ],
