--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7714,7 +7714,10 @@
       "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 40.98011363636363\tLoss: 1.84\n",
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 72.1590909090909\tLoss: 0.809\n",
       "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 89.77272727272727\tLoss: 0.368\n",
-      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 85.01420454545455\tLoss: 1.078\n"
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 85.01420454545455\tLoss: 1.078\n",
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 60.08522727272727\tLoss: 7.375\n",
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 25.0\tLoss: 30.392\n",
+      "Coord: [0.6 0.3]\tAcc: 12\tLoss: 49.498\r"
      ]
     }
    ],
