Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7679,7 +7679,12 @@
       "count: 370\tCoord: [0.3 0.7]\t\tAcc: 30.46875\tLoss: 27.657\n",
       "count: 372\tCoord: [0.5 0.7]\t\tAcc: 19.744318181818183\tLoss: 97.922\n",
       "count: 374\tCoord: [0.7 0.7]\t\tAcc: 9.659090909090908\tLoss: 897.078\n",
-      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 11.647727272727273\tLoss: 15726.813\n"
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 11.647727272727273\tLoss: 15726.813\n",
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 10.795454545454545\tLoss: 33.047\n",
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 11.221590909090908\tLoss: 6.594\n",
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 16.548295454545453\tLoss: 3.038\n",
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 24.857954545454547\tLoss: 2.973\n",
+      "Coord: [-0.3  0.8]\tAcc: 48\tLoss: 3.181\r"
      ]
     }
    ],
