--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7717,7 +7717,9 @@
       "count: 284\tCoord: [0.1 0.3]\t\tAcc: 85.01420454545455\tLoss: 1.078\n",
       "count: 286\tCoord: [0.3 0.3]\t\tAcc: 60.08522727272727\tLoss: 7.375\n",
       "count: 288\tCoord: [0.5 0.3]\t\tAcc: 25.0\tLoss: 30.392\n",
-      "Coord: [0.6 0.3]\tAcc: 12\tLoss: 49.498\r"
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 12.428977272727273\tLoss: 49.124\n",
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 8.948863636363637\tLoss: 54.948\n",
+      "Coord: [1.  0.3]\tAcc: 9\tLoss: 61.1383\r"
      ]
     }
    ],
