--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7719,7 +7719,9 @@
       "count: 288\tCoord: [0.5 0.3]\t\tAcc: 25.0\tLoss: 30.392\n",
       "count: 290\tCoord: [0.7 0.3]\t\tAcc: 12.428977272727273\tLoss: 49.124\n",
       "count: 292\tCoord: [0.9 0.3]\t\tAcc: 8.948863636363637\tLoss: 54.948\n",
-      "Coord: [1.  0.3]\tAcc: 9\tLoss: 61.1383\r"
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 12.997159090909092\tLoss: 2.3\n",
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 14.488636363636363\tLoss: 2.281\n",
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 23.72159090909091\tLoss: 2.156\n"
      ]
     }
    ],
