Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7684,7 +7684,11 @@
       "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 11.221590909090908\tLoss: 6.594\n",
       "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 16.548295454545453\tLoss: 3.038\n",
       "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 24.857954545454547\tLoss: 2.973\n",
-      "Coord: [-0.3  0.8]\tAcc: 48\tLoss: 3.181\r"
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 37.07386363636363\tLoss: 4.02\n",
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 40.90909090909091\tLoss: 7.229\n",
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 32.59943181818182\tLoss: 19.867\n",
+      "count: 392\tCoord: [0.4 0.8]\t\tAcc: 21.661931818181817\tLoss: 61.612\n",
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 10.795454545454545\tLoss: 280.396\n"
      ]
     }
    ],
