--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7721,7 +7721,8 @@
       "count: 292\tCoord: [0.9 0.3]\t\tAcc: 8.948863636363637\tLoss: 54.948\n",
       "count: 294\tCoord: [-1.   0.4]\t\tAcc: 12.997159090909092\tLoss: 2.3\n",
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 14.488636363636363\tLoss: 2.281\n",
-      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 23.72159090909091\tLoss: 2.156\n"
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 23.72159090909091\tLoss: 2.156\n",
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 52.91193181818182\tLoss: 1.412\n"
      ]
     }
    ],
