Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7781,7 +7781,16 @@
       "count: 378\tCoord: [-1.   0.8]\t\tAcc: 10.653409090909092\tLoss: 13.671\n",
       "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 10.369318181818182\tLoss: 6.78\n",
       "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 14.417613636363637\tLoss: 5.397\n",
-      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 17.542613636363637\tLoss: 7.023\n"
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 17.542613636363637\tLoss: 7.023\n",
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 28.551136363636363\tLoss: 10.114\n",
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 31.53409090909091\tLoss: 16.333\n",
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 26.491477272727273\tLoss: 31.011\n",
+      "count: 392\tCoord: [0.4 0.8]\t\tAcc: 17.1875\tLoss: 91.362\n",
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 10.795454545454545\tLoss: 802.733\n",
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 10.369318181818182\tLoss: 12259.5\n",
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 10.369318181818182\tLoss: 169512.526\n",
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 10.085227272727273\tLoss: 17.962\n",
+      "Coord: [-0.8  0.9]\tAcc: 13\tLoss: 9.9544\r"
      ]
     }
    ],
