--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7722,7 +7722,8 @@
       "count: 294\tCoord: [-1.   0.4]\t\tAcc: 12.997159090909092\tLoss: 2.3\n",
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 14.488636363636363\tLoss: 2.281\n",
       "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 23.72159090909091\tLoss: 2.156\n",
-      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 52.91193181818182\tLoss: 1.412\n"
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 52.91193181818182\tLoss: 1.412\n",
+      "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 76.20738636363636\tLoss: 0.776\n"
      ]
     }
    ],
