--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7688,7 +7688,11 @@
       "count: 388\tCoord: [0.  0.8]\t\tAcc: 40.90909090909091\tLoss: 7.229\n",
       "count: 390\tCoord: [0.2 0.8]\t\tAcc: 32.59943181818182\tLoss: 19.867\n",
       "count: 392\tCoord: [0.4 0.8]\t\tAcc: 21.661931818181817\tLoss: 61.612\n",
-      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 10.795454545454545\tLoss: 280.396\n"
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 10.795454545454545\tLoss: 280.396\n",
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 8.806818181818182\tLoss: 4018.059\n",
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 11.292613636363637\tLoss: 65639.046\n",
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 10.298295454545455\tLoss: 23.122\n",
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 13.636363636363637\tLoss: 4.23\n"
      ]
     }
    ],
