--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7725,7 +7725,9 @@
       "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 52.91193181818182\tLoss: 1.412\n",
       "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 76.20738636363636\tLoss: 0.776\n",
       "count: 304\tCoord: [0.  0.4]\t\tAcc: 81.5340909090909\tLoss: 1.11\n",
-      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 66.54829545454545\tLoss: 4.616\n"
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 66.54829545454545\tLoss: 4.616\n",
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 38.13920454545455\tLoss: 20.11\n",
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 16.12215909090909\tLoss: 44.221\n"
      ]
     }
    ],
