--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7692,7 +7692,11 @@
       "count: 396\tCoord: [0.8 0.8]\t\tAcc: 8.806818181818182\tLoss: 4018.059\n",
       "count: 398\tCoord: [1.  0.8]\t\tAcc: 11.292613636363637\tLoss: 65639.046\n",
       "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 10.298295454545455\tLoss: 23.122\n",
-      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 13.636363636363637\tLoss: 4.23\n"
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 13.636363636363637\tLoss: 4.23\n",
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 18.75\tLoss: 3.478\n",
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 26.420454545454547\tLoss: 4.613\n",
+      "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 31.605113636363637\tLoss: 7.723\n",
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 29.6875\tLoss: 16.324\n"
      ]
     }
    ],
