Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7790,7 +7790,15 @@
       "count: 396\tCoord: [0.8 0.8]\t\tAcc: 10.369318181818182\tLoss: 12259.5\n",
       "count: 398\tCoord: [1.  0.8]\t\tAcc: 10.369318181818182\tLoss: 169512.526\n",
       "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 10.085227272727273\tLoss: 17.962\n",
-      "Coord: [-0.8  0.9]\tAcc: 13\tLoss: 9.9544\r"
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 11.931818181818182\tLoss: 8.251\n",
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 12.926136363636363\tLoss: 9.471\n",
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 17.96875\tLoss: 13.673\n",
+      "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 23.508522727272727\tLoss: 20.353\n",
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 24.005681818181817\tLoss: 35.104\n",
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 19.176136363636363\tLoss: 72.725\n",
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 12.5\tLoss: 311.056\n",
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 10.511363636363637\tLoss: 3424.019\n",
+      "Coord: [0.9 0.9]\tAcc: 13\tLoss: 44955.613\r"
      ]
     }
    ],
