Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7727,7 +7727,10 @@
       "count: 304\tCoord: [0.  0.4]\t\tAcc: 81.5340909090909\tLoss: 1.11\n",
       "count: 306\tCoord: [0.2 0.4]\t\tAcc: 66.54829545454545\tLoss: 4.616\n",
       "count: 308\tCoord: [0.4 0.4]\t\tAcc: 38.13920454545455\tLoss: 20.11\n",
-      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 16.12215909090909\tLoss: 44.221\n"
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 16.12215909090909\tLoss: 44.221\n",
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 10.085227272727273\tLoss: 55.462\n",
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 9.232954545454545\tLoss: 60.104\n",
+      "Coord: [-1.   0.5]\tAcc: 13\tLoss: 2.297\r"
      ]
     }
    ],
