Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7696,7 +7696,11 @@
       "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 18.75\tLoss: 3.478\n",
       "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 26.420454545454547\tLoss: 4.613\n",
       "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 31.605113636363637\tLoss: 7.723\n",
-      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 29.6875\tLoss: 16.324\n"
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 29.6875\tLoss: 16.324\n",
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 22.15909090909091\tLoss: 44.788\n",
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 15.909090909090908\tLoss: 133.632\n",
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 9.303977272727273\tLoss: 1047.027\n",
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 8.59375\tLoss: 16953.26\n"
      ]
     }
    ],
