--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7730,7 +7730,9 @@
       "count: 310\tCoord: [0.6 0.4]\t\tAcc: 16.12215909090909\tLoss: 44.221\n",
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 10.085227272727273\tLoss: 55.462\n",
       "count: 314\tCoord: [1.  0.4]\t\tAcc: 9.232954545454545\tLoss: 60.104\n",
-      "Coord: [-1.   0.5]\tAcc: 13\tLoss: 2.297\r"
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 11.860795454545455\tLoss: 2.296\n",
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 16.335227272727273\tLoss: 2.258\n",
+      "Coord: [-0.6  0.5]\tAcc: 27\tLoss: 2.208\r"
      ]
     }
    ],
