Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7732,7 +7732,9 @@
       "count: 314\tCoord: [1.  0.4]\t\tAcc: 9.232954545454545\tLoss: 60.104\n",
       "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 11.860795454545455\tLoss: 2.296\n",
       "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 16.335227272727273\tLoss: 2.258\n",
-      "Coord: [-0.6  0.5]\tAcc: 27\tLoss: 2.208\r"
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 33.38068181818182\tLoss: 1.957\n",
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 59.23295454545455\tLoss: 1.318\n",
+      "Coord: [-0.2  0.5]\tAcc: 86\tLoss: 1.322\r"
      ]
     }
    ],
