--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7700,7 +7700,11 @@
       "count: 412\tCoord: [0.3 0.9]\t\tAcc: 22.15909090909091\tLoss: 44.788\n",
       "count: 414\tCoord: [0.5 0.9]\t\tAcc: 15.909090909090908\tLoss: 133.632\n",
       "count: 416\tCoord: [0.7 0.9]\t\tAcc: 9.303977272727273\tLoss: 1047.027\n",
-      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 8.59375\tLoss: 16953.26\n"
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 8.59375\tLoss: 16953.26\n",
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 10.653409090909092\tLoss: 72.336\n",
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 12.357954545454545\tLoss: 10.402\n",
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 13.423295454545455\tLoss: 4.399\n",
+      "Coord: [-0.5  1. ]\tAcc: 17\tLoss: 4.378\r"
      ]
     }
    ],
