Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7798,7 +7798,15 @@
       "count: 412\tCoord: [0.3 0.9]\t\tAcc: 19.176136363636363\tLoss: 72.725\n",
       "count: 414\tCoord: [0.5 0.9]\t\tAcc: 12.5\tLoss: 311.056\n",
       "count: 416\tCoord: [0.7 0.9]\t\tAcc: 10.511363636363637\tLoss: 3424.019\n",
-      "Coord: [0.9 0.9]\tAcc: 13\tLoss: 44955.613\r"
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 10.369318181818182\tLoss: 50509.121\n",
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 11.221590909090908\tLoss: 42.118\n",
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 11.860795454545455\tLoss: 17.707\n",
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 11.008522727272727\tLoss: 13.056\n",
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 12.357954545454545\tLoss: 19.089\n",
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 16.761363636363637\tLoss: 26.89\n",
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 18.678977272727273\tLoss: 42.573\n",
+      "count: 432\tCoord: [0.2 1. ]\t\tAcc: 17.045454545454547\tLoss: 74.732\n",
+      "Coord: [0.3 1. ]\tAcc: 26\tLoss: 102.177\r"
      ]
     }
    ],
