--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7734,7 +7734,9 @@
       "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 16.335227272727273\tLoss: 2.258\n",
       "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 33.38068181818182\tLoss: 1.957\n",
       "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 59.23295454545455\tLoss: 1.318\n",
-      "Coord: [-0.2  0.5]\tAcc: 86\tLoss: 1.322\r"
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 71.44886363636364\tLoss: 1.528\n",
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 65.55397727272727\tLoss: 3.783\n",
+      "Coord: [0.2 0.5]\tAcc: 75\tLoss: 6.974\r"
      ]
     }
    ],
