Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7736,7 +7736,9 @@
       "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 59.23295454545455\tLoss: 1.318\n",
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 71.44886363636364\tLoss: 1.528\n",
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 65.55397727272727\tLoss: 3.783\n",
-      "Coord: [0.2 0.5]\tAcc: 75\tLoss: 6.974\r"
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 44.67329545454545\tLoss: 13.614\n",
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 20.951704545454547\tLoss: 35.737\n",
+      "Coord: [0.6 0.5]\tAcc: 24\tLoss: 45.664\r"
      ]
     }
    ],
