--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7704,7 +7704,11 @@
       "count: 420\tCoord: [-1.  1.]\t\tAcc: 10.653409090909092\tLoss: 72.336\n",
       "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 12.357954545454545\tLoss: 10.402\n",
       "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 13.423295454545455\tLoss: 4.399\n",
-      "Coord: [-0.5  1. ]\tAcc: 17\tLoss: 4.378\r"
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 19.24715909090909\tLoss: 5.026\n",
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 22.37215909090909\tLoss: 8.73\n",
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 24.71590909090909\tLoss: 16.321\n",
+      "count: 432\tCoord: [0.2 1. ]\t\tAcc: 22.37215909090909\tLoss: 36.771\n",
+      "Coord: [0.3 1. ]\tAcc: 17\tLoss: 64.794\r"
      ]
     }
    ],
