Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7738,7 +7738,9 @@
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 65.55397727272727\tLoss: 3.783\n",
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 44.67329545454545\tLoss: 13.614\n",
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 20.951704545454547\tLoss: 35.737\n",
-      "Coord: [0.6 0.5]\tAcc: 24\tLoss: 45.664\r"
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 11.434659090909092\tLoss: 54.895\n",
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 9.019886363636363\tLoss: 61.833\n",
+      "Coord: [1.  0.5]\tAcc: 7\tLoss: 68.6522\r"
      ]
     }
    ],
