--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7740,7 +7740,9 @@
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 20.951704545454547\tLoss: 35.737\n",
       "count: 332\tCoord: [0.7 0.5]\t\tAcc: 11.434659090909092\tLoss: 54.895\n",
       "count: 334\tCoord: [0.9 0.5]\t\tAcc: 9.019886363636363\tLoss: 61.833\n",
-      "Coord: [1.  0.5]\tAcc: 7\tLoss: 68.6522\r"
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 9.303977272727273\tLoss: 2.301\n",
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 14.275568181818182\tLoss: 2.294\n",
+      "Coord: [-0.7  0.6]\tAcc: 15\tLoss: 2.286\r"
      ]
     }
    ],
