Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7474,10 +7474,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-05T02:22:49.722Z"
+     "end_time": "2019-05-05T03:36:40.647392Z",
+     "start_time": "2019-05-05T02:22:57.321317Z"
     }
    },
    "outputs": [
@@ -7757,10 +7758,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-05T02:22:50.340Z"
+     "end_time": "2019-05-05T03:36:47.612345Z",
+     "start_time": "2019-05-05T03:36:45.550996Z"
     }
    },
    "outputs": [
