--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7742,7 +7742,9 @@
       "count: 334\tCoord: [0.9 0.5]\t\tAcc: 9.019886363636363\tLoss: 61.833\n",
       "count: 336\tCoord: [-1.   0.6]\t\tAcc: 9.303977272727273\tLoss: 2.301\n",
       "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 14.275568181818182\tLoss: 2.294\n",
-      "Coord: [-0.7  0.6]\tAcc: 15\tLoss: 2.286\r"
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 19.602272727272727\tLoss: 2.239\n",
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 40.26988636363637\tLoss: 1.885\n",
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 57.88352272727273\tLoss: 2.158\n"
      ]
     }
    ],
