--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7744,7 +7744,9 @@
       "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 14.275568181818182\tLoss: 2.294\n",
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 19.602272727272727\tLoss: 2.239\n",
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 40.26988636363637\tLoss: 1.885\n",
-      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 57.88352272727273\tLoss: 2.158\n"
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 57.88352272727273\tLoss: 2.158\n",
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 61.64772727272727\tLoss: 3.936\n",
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 47.79829545454545\tLoss: 10.715\n"
      ]
     }
    ],
