Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7746,7 +7746,10 @@
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 40.26988636363637\tLoss: 1.885\n",
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 57.88352272727273\tLoss: 2.158\n",
       "count: 346\tCoord: [0.  0.6]\t\tAcc: 61.64772727272727\tLoss: 3.936\n",
-      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 47.79829545454545\tLoss: 10.715\n"
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 47.79829545454545\tLoss: 10.715\n",
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 27.62784090909091\tLoss: 28.877\n",
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 13.423295454545455\tLoss: 50.542\n",
+      "Coord: [0.7 0.6]\tAcc: 10\tLoss: 65.411\r"
      ]
     }
    ],
