--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7749,7 +7749,9 @@
       "count: 348\tCoord: [0.2 0.6]\t\tAcc: 47.79829545454545\tLoss: 10.715\n",
       "count: 350\tCoord: [0.4 0.6]\t\tAcc: 27.62784090909091\tLoss: 28.877\n",
       "count: 352\tCoord: [0.6 0.6]\t\tAcc: 13.423295454545455\tLoss: 50.542\n",
-      "Coord: [0.7 0.6]\tAcc: 10\tLoss: 65.411\r"
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 9.517045454545455\tLoss: 63.492\n",
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 8.806818181818182\tLoss: 68.969\n",
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 10.653409090909092\tLoss: 2.305\n"
      ]
     }
    ],
