--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7751,7 +7751,9 @@
       "count: 352\tCoord: [0.6 0.6]\t\tAcc: 13.423295454545455\tLoss: 50.542\n",
       "count: 354\tCoord: [0.8 0.6]\t\tAcc: 9.517045454545455\tLoss: 63.492\n",
       "count: 356\tCoord: [1.  0.6]\t\tAcc: 8.806818181818182\tLoss: 68.969\n",
-      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 10.653409090909092\tLoss: 2.305\n"
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 10.653409090909092\tLoss: 2.305\n",
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 14.417613636363637\tLoss: 2.331\n",
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 21.59090909090909\tLoss: 2.343\n"
      ]
     }
    ],
