--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7753,7 +7753,8 @@
       "count: 356\tCoord: [1.  0.6]\t\tAcc: 8.806818181818182\tLoss: 68.969\n",
       "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 10.653409090909092\tLoss: 2.305\n",
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 14.417613636363637\tLoss: 2.331\n",
-      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 21.59090909090909\tLoss: 2.343\n"
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 21.59090909090909\tLoss: 2.343\n",
+      "Coord: [-0.4  0.7]\tAcc: 40\tLoss: 2.584\r"
      ]
     }
    ],
