Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7754,7 +7754,9 @@
       "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 10.653409090909092\tLoss: 2.305\n",
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 14.417613636363637\tLoss: 2.331\n",
       "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 21.59090909090909\tLoss: 2.343\n",
-      "Coord: [-0.4  0.7]\tAcc: 40\tLoss: 2.584\r"
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 39.77272727272727\tLoss: 2.803\n",
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 50.85227272727273\tLoss: 4.408\n",
+      "Coord: [0.  0.7]\tAcc: 58\tLoss: 6.256\r"
      ]
     }
    ],
