Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7756,7 +7756,9 @@
       "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 21.59090909090909\tLoss: 2.343\n",
       "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 39.77272727272727\tLoss: 2.803\n",
       "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 50.85227272727273\tLoss: 4.408\n",
-      "Coord: [0.  0.7]\tAcc: 58\tLoss: 6.256\r"
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 44.95738636363637\tLoss: 10.033\n",
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 31.392045454545453\tLoss: 24.273\n",
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 15.411931818181818\tLoss: 46.428\n"
      ]
     }
    ],
