Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7758,7 +7758,10 @@
       "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 50.85227272727273\tLoss: 4.408\n",
       "count: 368\tCoord: [0.1 0.7]\t\tAcc: 44.95738636363637\tLoss: 10.033\n",
       "count: 370\tCoord: [0.3 0.7]\t\tAcc: 31.392045454545453\tLoss: 24.273\n",
-      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 15.411931818181818\tLoss: 46.428\n"
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 15.411931818181818\tLoss: 46.428\n",
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 10.014204545454545\tLoss: 64.485\n",
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 9.232954545454545\tLoss: 72.233\n",
+      "Coord: [1.  0.7]\tAcc: 8\tLoss: 80.9294\r"
      ]
     }
    ],
