--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7761,7 +7761,9 @@
       "count: 372\tCoord: [0.5 0.7]\t\tAcc: 15.411931818181818\tLoss: 46.428\n",
       "count: 374\tCoord: [0.7 0.7]\t\tAcc: 10.014204545454545\tLoss: 64.485\n",
       "count: 376\tCoord: [0.9 0.7]\t\tAcc: 9.232954545454545\tLoss: 72.233\n",
-      "Coord: [1.  0.7]\tAcc: 8\tLoss: 80.9294\r"
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 11.221590909090908\tLoss: 2.303\n",
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 10.9375\tLoss: 2.354\n",
+      "Coord: [-0.6  0.8]\tAcc: 25\tLoss: 2.534\r"
      ]
     }
    ],
