Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7763,7 +7763,9 @@
       "count: 376\tCoord: [0.9 0.7]\t\tAcc: 9.232954545454545\tLoss: 72.233\n",
       "count: 378\tCoord: [-1.   0.8]\t\tAcc: 11.221590909090908\tLoss: 2.303\n",
       "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 10.9375\tLoss: 2.354\n",
-      "Coord: [-0.6  0.8]\tAcc: 25\tLoss: 2.534\r"
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 14.417613636363637\tLoss: 2.566\n",
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 22.65625\tLoss: 3.317\n",
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 37.78409090909091\tLoss: 5.192\n"
      ]
     }
    ],
