--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13837,7 +13837,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.save('a_loss_list_2.npy', np.asarray(loss_list))\n",
+    "np.save('a_acc_list_2.npy', np.asarray(acc_list))\n",
+    "random_direction1 = get_random_weights(copy_of_the_weights)\n",
+    "random_direction2 = get_random_weights(copy_of_the_weights)\n",
+    "\n",
+    "for d1,d2,w in zip(random_direction1,random_direction2,copy_of_the_weights):\n",
+    "    \n",
+    "    if w.dim() == 1:\n",
+    "        d1.data = torch.zeros_like(w)\n",
+    "        d2.data = torch.zeros_like(w)\n",
+    "        \n",
+    "    elif w.shape[0] == 10:\n",
+    "        d11,_ = tf.qr(d1.cpu().numpy())\n",
+    "        d11   = d11.eval()\n",
+    "        d22,_ = tf.qr(np.transpose(d2.cpu().numpy(),(2,3,1,0)))\n",
+    "        d22   = np.transpose(d22.eval(),(3,2,0,1))\n",
+    "        \n",
+    "\n",
+    "        d1.data   = torch.from_numpy(d11).cuda()\n",
+    "        d2.data   = torch.from_numpy(d22).cuda()     \n",
+    "        \n",
+    "        w_norm  = w.view((w.shape[0],-1))  .norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "        d_norm1 = d1.view((d1.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "        d_norm2 = d2.view((d2.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "\n",
+    "        d1.data = d1.cuda() * (w_norm/(d_norm1.cuda()+1e-10))\n",
+    "        d2.data = d2.cuda() * (w_norm/(d_norm2.cuda()+1e-10))\n",
+    "        \n",
+    "    else:\n",
+    "        d11,_ = tf.qr(d1.cpu().numpy())\n",
+    "        d11   = d11.eval()\n",
+    "        d22,_ = tf.qr(np.transpose(d2.cpu().numpy(),(2,3,0,1)))\n",
+    "        d22   = np.transpose(d22.eval(),(2,3,0,1))\n",
+    "        print(d11.shape,d22.shape)\n",
+    "\n",
+    "        d1.data   = torch.from_numpy(d11).cuda()\n",
+    "        d2.data   = torch.from_numpy(d22).cuda()     \n",
+    "        \n",
+    "        w_norm  = w.view((w.shape[0],-1))  .norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "        d_norm1 = d1.view((d1.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "        d_norm2 = d2.view((d2.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "\n",
+    "        d1.data = d1.cuda() * (w_norm/(d_norm1.cuda()+1e-10))\n",
+    "        d2.data = d2.cuda() * (w_norm/(d_norm2.cuda()+1e-10))"
+   ]
   },
   {
    "cell_type": "code",
