Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7765,7 +7765,10 @@
       "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 10.9375\tLoss: 2.354\n",
       "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 14.417613636363637\tLoss: 2.566\n",
       "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 22.65625\tLoss: 3.317\n",
-      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 37.78409090909091\tLoss: 5.192\n"
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 37.78409090909091\tLoss: 5.192\n",
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 40.55397727272727\tLoss: 9.946\n",
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 31.960227272727273\tLoss: 22.338\n",
+      "Coord: [0.3 0.8]\tAcc: 18\tLoss: 36.651\r"
      ]
     }
    ],
