Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7768,7 +7768,9 @@
       "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 37.78409090909091\tLoss: 5.192\n",
       "count: 388\tCoord: [0.  0.8]\t\tAcc: 40.55397727272727\tLoss: 9.946\n",
       "count: 390\tCoord: [0.2 0.8]\t\tAcc: 31.960227272727273\tLoss: 22.338\n",
-      "Coord: [0.3 0.8]\tAcc: 18\tLoss: 36.651\r"
+      "count: 392\tCoord: [0.4 0.8]\t\tAcc: 17.755681818181817\tLoss: 43.906\n",
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 11.789772727272727\tLoss: 65.02\n",
+      "Coord: [0.8 0.8]\tAcc: 10\tLoss: 80.516\r"
      ]
     }
    ],
