Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7770,7 +7770,9 @@
       "count: 390\tCoord: [0.2 0.8]\t\tAcc: 31.960227272727273\tLoss: 22.338\n",
       "count: 392\tCoord: [0.4 0.8]\t\tAcc: 17.755681818181817\tLoss: 43.906\n",
       "count: 394\tCoord: [0.6 0.8]\t\tAcc: 11.789772727272727\tLoss: 65.02\n",
-      "Coord: [0.8 0.8]\tAcc: 10\tLoss: 80.516\r"
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 8.877840909090908\tLoss: 75.915\n",
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 8.877840909090908\tLoss: 80.195\n",
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 10.440340909090908\tLoss: 2.348\n"
      ]
     }
    ],
