Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7772,7 +7772,10 @@
       "count: 394\tCoord: [0.6 0.8]\t\tAcc: 11.789772727272727\tLoss: 65.02\n",
       "count: 396\tCoord: [0.8 0.8]\t\tAcc: 8.877840909090908\tLoss: 75.915\n",
       "count: 398\tCoord: [1.  0.8]\t\tAcc: 8.877840909090908\tLoss: 80.195\n",
-      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 10.440340909090908\tLoss: 2.348\n"
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 10.440340909090908\tLoss: 2.348\n",
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 11.576704545454545\tLoss: 2.643\n",
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 15.269886363636363\tLoss: 3.621\n",
+      "Coord: [-0.4  0.9]\tAcc: 25\tLoss: 4.692\r"
      ]
     }
    ],
