--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7775,7 +7775,9 @@
       "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 10.440340909090908\tLoss: 2.348\n",
       "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 11.576704545454545\tLoss: 2.643\n",
       "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 15.269886363636363\tLoss: 3.621\n",
-      "Coord: [-0.4  0.9]\tAcc: 25\tLoss: 4.692\r"
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 22.37215909090909\tLoss: 5.914\n",
+      "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 32.03125\tLoss: 10.367\n",
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 28.90625\tLoss: 22.236\n"
      ]
     }
    ],
