Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7777,7 +7777,10 @@
       "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 15.269886363636363\tLoss: 3.621\n",
       "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 22.37215909090909\tLoss: 5.914\n",
       "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 32.03125\tLoss: 10.367\n",
-      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 28.90625\tLoss: 22.236\n"
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 28.90625\tLoss: 22.236\n",
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 18.963068181818183\tLoss: 43.038\n",
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 11.860795454545455\tLoss: 67.392\n",
+      "Coord: [0.6 0.9]\tAcc: 10\tLoss: 87.937\r"
      ]
     }
    ],
