Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7780,7 +7780,9 @@
       "count: 410\tCoord: [0.1 0.9]\t\tAcc: 28.90625\tLoss: 22.236\n",
       "count: 412\tCoord: [0.3 0.9]\t\tAcc: 18.963068181818183\tLoss: 43.038\n",
       "count: 414\tCoord: [0.5 0.9]\t\tAcc: 11.860795454545455\tLoss: 67.392\n",
-      "Coord: [0.6 0.9]\tAcc: 10\tLoss: 87.937\r"
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 9.375\tLoss: 80.842\n",
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 9.019886363636363\tLoss: 86.701\n",
+      "Coord: [-1.  1.]\tAcc: 19\tLoss: 2.3431\r"
      ]
     }
    ],
