--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7782,7 +7782,9 @@
       "count: 414\tCoord: [0.5 0.9]\t\tAcc: 11.860795454545455\tLoss: 67.392\n",
       "count: 416\tCoord: [0.7 0.9]\t\tAcc: 9.375\tLoss: 80.842\n",
       "count: 418\tCoord: [0.9 0.9]\t\tAcc: 9.019886363636363\tLoss: 86.701\n",
-      "Coord: [-1.  1.]\tAcc: 19\tLoss: 2.3431\r"
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 10.15625\tLoss: 2.344\n",
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 11.789772727272727\tLoss: 2.616\n",
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 10.9375\tLoss: 3.652\n"
      ]
     }
    ],
