Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7784,7 +7784,10 @@
       "count: 418\tCoord: [0.9 0.9]\t\tAcc: 9.019886363636363\tLoss: 86.701\n",
       "count: 420\tCoord: [-1.  1.]\t\tAcc: 10.15625\tLoss: 2.344\n",
       "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 11.789772727272727\tLoss: 2.616\n",
-      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 10.9375\tLoss: 3.652\n"
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 10.9375\tLoss: 3.652\n",
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 14.701704545454545\tLoss: 6.186\n",
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 21.59090909090909\tLoss: 10.739\n",
+      "Coord: [-0.1  1. ]\tAcc: 27\tLoss: 14.998\r"
      ]
     }
    ],
