--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7787,7 +7787,9 @@
       "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 10.9375\tLoss: 3.652\n",
       "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 14.701704545454545\tLoss: 6.186\n",
       "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 21.59090909090909\tLoss: 10.739\n",
-      "Coord: [-0.1  1. ]\tAcc: 27\tLoss: 14.998\r"
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 26.633522727272727\tLoss: 21.746\n",
+      "count: 432\tCoord: [0.2 1. ]\t\tAcc: 19.53125\tLoss: 43.737\n",
+      "count: 434\tCoord: [0.4 1. ]\t\tAcc: 13.210227272727273\tLoss: 70.817\n"
      ]
     }
    ],
