--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7789,7 +7789,9 @@
       "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 21.59090909090909\tLoss: 10.739\n",
       "count: 430\tCoord: [0. 1.]\t\tAcc: 26.633522727272727\tLoss: 21.746\n",
       "count: 432\tCoord: [0.2 1. ]\t\tAcc: 19.53125\tLoss: 43.737\n",
-      "count: 434\tCoord: [0.4 1. ]\t\tAcc: 13.210227272727273\tLoss: 70.817\n"
+      "count: 434\tCoord: [0.4 1. ]\t\tAcc: 13.210227272727273\tLoss: 70.817\n",
+      "count: 436\tCoord: [0.6 1. ]\t\tAcc: 10.085227272727273\tLoss: 89.654\n",
+      "count: 438\tCoord: [0.8 1. ]\t\tAcc: 8.877840909090908\tLoss: 94.694\n"
      ]
     }
    ],
