Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13858,7 +13858,9 @@
     "\n",
     "for w in copy_of_the_weights:\n",
     "    \n",
-    "    if w.dim() == 1: random_direction1.append(torch.zeros_like(w))\n",
+    "    if w.dim() == 1: \n",
+    "        random_direction1.append(torch.zeros_like(w))\n",
+    "        random_direction2.append(torch.zeros_like(w))\n",
     "        \n",
     "    else:\n",
     "        random_vector = w.clone().cpu().numpy()\n",
