Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13870,7 +13870,7 @@
     "        random_vector1 = random_vector - random_vector.mean((2,3),keepdims=True)\n",
     "        random_vector2 = random_vector - random_vector.mean((0,1),keepdims=True)\n",
     "        \n",
-    "        sigma1 = tf.matmul(tf.transpose(random_vector1,(0,1,3,2)))\n",
+    "        sigma1 = tf.matmul(tf.transpose(random_vector1,(0,1,3,2)),random_vector1) / random_vector1.shape[3]\n",
     "        \n",
     "        print(random_vector.mean((2,3),keepdims=True).shape)\n",
     "        print(random_vector.mean((0,1),keepdims=True).shape)\n",
