Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13875,6 +13875,9 @@
     "        \n",
     "        s1,u1,v1 = tf.linalg.svd(sigma1,False)\n",
     "        s2,u2,v2 = tf.linalg.svd(sigma2,False)\n",
+    "        \n",
+    "        tmp1 = tf.matmul(u1,tf.linalg.diag(tf.sqrt(s1+1e-10)))\n",
+    "        tmp1 = np.dot(U1, np.diag(1/np.sqrt(S+self.regularization)))\n",
     "        print(s1,u1,v1)\n",
     "        print(s2,u2,v2)\n",
     "        break\n",
