Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13834,11 +13834,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 237,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T03:59:53.401269Z",
-     "start_time": "2019-05-05T03:59:53.364832Z"
+     "end_time": "2019-05-05T04:01:20.073879Z",
+     "start_time": "2019-05-05T04:01:20.020022Z"
     }
    },
    "outputs": [
@@ -13846,8 +13846,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"Svd:0\", shape=(96, 3, 3), dtype=float32) Tensor(\"Svd:1\", shape=(96, 3, 3, 3), dtype=float32) Tensor(\"Svd:2\", shape=(96, 3, 3, 3), dtype=float32)\n",
-      "Tensor(\"Svd_1:0\", shape=(3, 3, 3), dtype=float32) Tensor(\"Svd_1:1\", shape=(3, 3, 3, 3), dtype=float32) Tensor(\"Svd_1:2\", shape=(3, 3, 3, 3), dtype=float32)\n"
+      "Tensor(\"MatMul_14:0\", shape=(96, 3, 3, 3), dtype=float32)\n",
+      "Tensor(\"Svd_2:0\", shape=(96, 3, 3), dtype=float32) Tensor(\"Svd_2:1\", shape=(96, 3, 3, 3), dtype=float32) Tensor(\"Svd_2:2\", shape=(96, 3, 3, 3), dtype=float32)\n",
+      "Tensor(\"Svd_3:0\", shape=(3, 3, 3), dtype=float32) Tensor(\"Svd_3:1\", shape=(3, 3, 3, 3), dtype=float32) Tensor(\"Svd_3:2\", shape=(3, 3, 3, 3), dtype=float32)\n"
      ]
     }
    ],
@@ -13876,9 +13877,10 @@
     "        s1,u1,v1 = tf.linalg.svd(sigma1,False)\n",
     "        s2,u2,v2 = tf.linalg.svd(sigma2,False)\n",
     "        \n",
-    "        tmp1 = tf.matmul(u1,tf.linalg.diag(tf.sqrt(s1+1e-10)))\n",
-    "        tmp1 = np.dot(U1, np.diag(1/np.sqrt(S+self.regularization)))\n",
-    "        print(s1,u1,v1)\n",
+    "        tmp1 = tf.matmul(u1,1/tf.linalg.diag(tf.sqrt(s1+1e-10)))\n",
+    "        tmp1 = tf.matmul(u1,1/tf.linalg.diag(tf.sqrt(s1+1e-10)))\n",
+    "\n",
+    "        print(tmp1)\n",
     "        print(s2,u2,v2)\n",
     "        break\n",
     "        random_vector,_ = tf.qr(random_vector)\n",
