Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13834,11 +13834,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 239,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T04:02:35.316344Z",
-     "start_time": "2019-05-05T04:02:35.269493Z"
+     "end_time": "2019-05-05T04:02:41.500230Z",
+     "start_time": "2019-05-05T04:02:41.453346Z"
     }
    },
    "outputs": [
@@ -13846,8 +13846,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"MatMul_17:0\", shape=(96, 3, 3, 3), dtype=float32)\n",
-      "Tensor(\"Svd_5:0\", shape=(3, 3, 3), dtype=float32) Tensor(\"Svd_5:1\", shape=(3, 3, 3, 3), dtype=float32) Tensor(\"Svd_5:2\", shape=(3, 3, 3, 3), dtype=float32)\n"
+      "Tensor(\"MatMul_21:0\", shape=(96, 3, 3, 3), dtype=float32)\n",
+      "Tensor(\"MatMul_22:0\", shape=(3, 3, 3, 3), dtype=float32)\n"
      ]
     }
    ],
