--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13834,11 +13834,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 243,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T04:08:33.435019Z",
-     "start_time": "2019-05-05T04:08:33.374213Z"
+     "end_time": "2019-05-05T04:08:49.857791Z",
+     "start_time": "2019-05-05T04:08:49.801933Z"
     }
    },
    "outputs": [
@@ -13846,8 +13846,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"matmul_32:0\", shape=(96, 3, 3, 3), dtype=float32)\n",
-      "Tensor(\"matmul_34:0\", shape=(3, 3, 3, 3), dtype=float32)\n"
+      "Tensor(\"matmul_50:0\", shape=(96, 3, 3, 3), dtype=float32)\n",
+      "Tensor(\"matmul_51:0\", shape=(3, 3, 96, 3), dtype=float32)\n"
      ]
     }
    ],
@@ -13882,10 +13882,11 @@
     "        tmp2 = tmp2 @ tf.transpose(u2,(0,1,3,2))\n",
     "        \n",
     "        random_vector1 = random_vector1 @ tf.transpose(tmp1,(0,1,3,2))\n",
-    "        random_vector2 = random_vector2 @ tf.transpose(tmp1,(0,1,3,2))\n",
+    "        random_vector2 = random_vector2 @ tf.transpose(tmp2,(0,1,3,2))\n",
+    "        random_vector2 = tf.transpose(random_vector2,(2,3,0))\n",
     "\n",
-    "        print(tmp1)\n",
-    "        print(tmp2)\n",
+    "        print(random_vector1)\n",
+    "        print(random_vector2)\n",
     "\n",
     "        break\n",
     "        random_vector,_ = tf.qr(random_vector)\n",
