--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13834,11 +13834,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 244,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T04:08:49.857791Z",
-     "start_time": "2019-05-05T04:08:49.801933Z"
+     "end_time": "2019-05-05T04:09:04.594985Z",
+     "start_time": "2019-05-05T04:09:04.530160Z"
     }
    },
    "outputs": [
@@ -13846,8 +13846,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"matmul_50:0\", shape=(96, 3, 3, 3), dtype=float32)\n",
-      "Tensor(\"matmul_51:0\", shape=(3, 3, 96, 3), dtype=float32)\n"
+      "Tensor(\"matmul_58:0\", shape=(96, 3, 3, 3), dtype=float32)\n",
+      "Tensor(\"transpose_41:0\", shape=(96, 3, 3, 3), dtype=float32)\n"
      ]
     }
    ],
@@ -13883,7 +13883,11 @@
     "        \n",
     "        random_vector1 = random_vector1 @ tf.transpose(tmp1,(0,1,3,2))\n",
     "        random_vector2 = random_vector2 @ tf.transpose(tmp2,(0,1,3,2))\n",
-    "        random_vector2 = tf.transpose(random_vector2,(2,3,0))\n",
+    "        random_vector2 = tf.transpose(random_vector2,(2,3,0,1))\n",
+    "        \n",
+    "        random_vector1 = torch.from_numpy(random_vector1.eval())\n",
+    "        random_vector2 = torch.from_numpy(random_vector2.eval())\n",
+    "\n",
     "\n",
     "        print(random_vector1)\n",
     "        print(random_vector2)\n",
