Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13834,11 +13834,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 251,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T04:11:14.404807Z",
-     "start_time": "2019-05-05T04:11:06.994533Z"
+     "end_time": "2019-05-05T04:12:54.621164Z",
+     "start_time": "2019-05-05T04:12:44.979331Z"
     }
    },
    "outputs": [
@@ -13846,24 +13846,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([96, 3, 3, 3])\n",
-      "torch.Size([96, 3, 3, 3])\n",
-      "torch.Size([96, 96, 3, 3])\n",
-      "torch.Size([96, 96, 3, 3])\n",
-      "torch.Size([96, 96, 3, 3])\n",
-      "torch.Size([96, 96, 3, 3])\n",
-      "torch.Size([192, 96, 3, 3])\n",
-      "torch.Size([192, 96, 3, 3])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192, 192, 1, 1])\n",
-      "torch.Size([192, 192, 1, 1])\n",
-      "torch.Size([10, 192, 1, 1])\n",
-      "torch.Size([10, 192, 1, 1])\n"
+      "2592\n",
+      "2592\n",
+      "82944\n",
+      "82944\n",
+      "82944\n",
+      "82944\n",
+      "165888\n",
+      "165888\n",
+      "331776\n",
+      "331776\n",
+      "331776\n",
+      "331776\n",
+      "331776\n",
+      "331776\n",
+      "0\n",
+      "36864\n",
+      "0\n",
+      "1920\n"
      ]
     }
    ],
@@ -13903,10 +13903,8 @@
     "        \n",
     "        random_vector1 = random_vector1.eval()\n",
     "        random_vector2 = random_vector2.eval()\n",
-    "        print(random_vector1.shape)\n",
-    "        print(random_vector2.shape)\n",
-    "        \n",
-    "        break\n",
+    "        print(np.isnan(random_vector1).sum())\n",
+    "        print(np.isnan(random_vector2).sum())\n",
     "#         random_direction1.append(random_vector1)\n",
     "#         random_direction2.append(random_vector2)"
    ]
