--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13834,11 +13834,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T04:12:54.621164Z",
-     "start_time": "2019-05-05T04:12:44.979331Z"
+     "start_time": "2019-05-05T04:13:55.508Z"
     }
    },
    "outputs": [
@@ -13846,24 +13845,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2592\n",
-      "2592\n",
-      "82944\n",
-      "82944\n",
-      "82944\n",
-      "82944\n",
-      "165888\n",
-      "165888\n",
-      "331776\n",
-      "331776\n",
-      "331776\n",
-      "331776\n",
-      "331776\n",
-      "331776\n",
       "0\n",
-      "36864\n",
-      "0\n",
-      "1920\n"
+      "0\n"
      ]
     }
    ],
@@ -13885,16 +13868,17 @@
     "        random_vector1 = random_vector - random_vector.mean((2,3),keepdims=True)\n",
     "        random_vector2 = random_vector - random_vector.mean((0,1),keepdims=True)\n",
     "        random_vector2 = np.transpose(random_vector2,(2,3,0,1))\n",
-    "        \n",
+    "        print(np.isnan(random_vector1).sum())\n",
+    "        print(np.isnan(random_vector2).sum())\n",
     "        sigma1 = tf.matmul(tf.transpose(random_vector1,(0,1,3,2)),random_vector1) / random_vector1.shape[3]\n",
     "        sigma2 = tf.matmul(tf.transpose(random_vector2,(0,1,3,2)),random_vector2) / random_vector2.shape[3]\n",
     "        \n",
     "        s1,u1,v1 = tf.linalg.svd(sigma1,False)\n",
     "        s2,u2,v2 = tf.linalg.svd(sigma2,False)\n",
     "        \n",
-    "        tmp1 = tf.matmul(u1,1/tf.linalg.diag(tf.sqrt(s1+1e-5)))\n",
+    "        tmp1 = tf.matmul(u1,1/tf.linalg.diag(tf.sqrt(s1)+1e-5))\n",
     "        tmp1 = tmp1 @ tf.transpose(u1,(0,1,3,2))\n",
-    "        tmp2 = tf.matmul(u2,1/tf.linalg.diag(tf.sqrt(s2+1e-5)))\n",
+    "        tmp2 = tf.matmul(u2,1/tf.linalg.diag(tf.sqrt(s2)+1e-5))\n",
     "        tmp2 = tmp2 @ tf.transpose(u2,(0,1,3,2))\n",
     "        \n",
     "        random_vector1 = random_vector1 @ tf.transpose(tmp1,(0,1,3,2))\n",
