--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13834,10 +13834,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 258,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-05T04:13:55.508Z"
+     "end_time": "2019-05-05T04:14:55.809090Z",
+     "start_time": "2019-05-05T04:14:54.748036Z"
     }
    },
    "outputs": [
@@ -13868,13 +13869,18 @@
     "        random_vector1 = random_vector - random_vector.mean((2,3),keepdims=True)\n",
     "        random_vector2 = random_vector - random_vector.mean((0,1),keepdims=True)\n",
     "        random_vector2 = np.transpose(random_vector2,(2,3,0,1))\n",
-    "        print(np.isnan(random_vector1).sum())\n",
-    "        print(np.isnan(random_vector2).sum())\n",
+    "        \n",
     "        sigma1 = tf.matmul(tf.transpose(random_vector1,(0,1,3,2)),random_vector1) / random_vector1.shape[3]\n",
     "        sigma2 = tf.matmul(tf.transpose(random_vector2,(0,1,3,2)),random_vector2) / random_vector2.shape[3]\n",
-    "        \n",
+    "\n",
     "        s1,u1,v1 = tf.linalg.svd(sigma1,False)\n",
     "        s2,u2,v2 = tf.linalg.svd(sigma2,False)\n",
+    "        \n",
+    "        tmp1 = tf.matmul(u1,1/tf.linalg.diag(tf.sqrt(s1)+1e-5))\n",
+    "        tmp1 = tmp1 @ tf.transpose(u1,(0,1,3,2))\n",
+    "        print(np.isnan(v1.eval()).sum())\n",
+    "        print(np.isnan(v2.eval()).sum())    \n",
+    "        break\n",
     "        \n",
     "        tmp1 = tf.matmul(u1,1/tf.linalg.diag(tf.sqrt(s1)+1e-5))\n",
     "        tmp1 = tmp1 @ tf.transpose(u1,(0,1,3,2))\n",
