--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13834,11 +13834,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 260,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T04:14:55.809090Z",
-     "start_time": "2019-05-05T04:14:54.748036Z"
+     "end_time": "2019-05-05T04:15:26.004397Z",
+     "start_time": "2019-05-05T04:15:25.383438Z"
     }
    },
    "outputs": [
@@ -13846,8 +13846,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "0\n"
+      "Tensor(\"MatrixDiag_143:0\", shape=(96, 3, 3, 3), dtype=float32)\n",
+      "2379\n",
+      "2379\n"
      ]
     }
    ],
@@ -13876,10 +13877,11 @@
     "        s1,u1,v1 = tf.linalg.svd(sigma1,False)\n",
     "        s2,u2,v2 = tf.linalg.svd(sigma2,False)\n",
     "        \n",
-    "        tmp1 = tf.matmul(u1,1/tf.linalg.diag(tf.sqrt(s1)+1e-5))\n",
+    "        tmp1 = u1 @ 1/(tf.sqrt(tf.linalg.diag(s1)))\n",
+    "        print(tf.linalg.diag(s1))\n",
     "        tmp1 = tmp1 @ tf.transpose(u1,(0,1,3,2))\n",
-    "        print(np.isnan(v1.eval()).sum())\n",
-    "        print(np.isnan(v2.eval()).sum())    \n",
+    "        print(np.isnan(tmp1.eval()).sum())\n",
+    "        print(np.isnan(tmp1.eval()).sum())    \n",
     "        break\n",
     "        \n",
     "        tmp1 = tf.matmul(u1,1/tf.linalg.diag(tf.sqrt(s1)+1e-5))\n",
