--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13877,10 +13877,11 @@
     "        random_vector2 = random_vector2 @ tf.transpose(tmp2,(0,1,3,2))\n",
     "        random_vector2 = tf.transpose(random_vector2,(2,3,0,1))\n",
     "        \n",
-    "        random_vector1 = random_vector1.eval()\n",
-    "        random_vector2 = random_vector2.eval()\n",
-    "        random_direction1.append(torch.from_numpy(random_vector1))\n",
-    "        random_direction2.append(torch.from_numpy(random_vector2))"
+    "        random_vector1 = torch.from_numpy(random_vector1.eval())\n",
+    "        random_vector2 = torch.from_numpy(random_vector2.eval())\n",
+    "\n",
+    "        \n",
+    "        "
    ]
   },
   {
