Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13954,7 +13954,17 @@
      "start_time": "2019-05-05T04:24:26.165Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 0\tCoord: [-1. -1.]\t\tAcc: 10.866477272727273\tLoss: 2775.132\n",
+      "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 9.659090909090908\tLoss: 658.408\n",
+      "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 10.653409090909092\tLoss: 224.907\n"
+     ]
+    }
+   ],
    "source": [
     "# start the evaluation\n",
     "loss_list = np.zeros((numebr_of_points,numebr_of_points)); acc_list  = np.zeros((numebr_of_points,numebr_of_points))\n",
