Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13862,7 +13862,16 @@
      "start_time": "2019-05-05T04:25:36.010Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 0\tCoord: [-1. -1.]\t\tAcc: 10.15625\tLoss: 653.13\n",
+      "Coord: [-0.9 -1. ]\tAcc: 13\tLoss: 421.747\r"
+     ]
+    }
+   ],
    "source": [
     "# start the evaluation\n",
     "loss_list = np.zeros((numebr_of_points,numebr_of_points)); acc_list  = np.zeros((numebr_of_points,numebr_of_points))\n",
