--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7448,7 +7448,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== 2. Random - Orthogonal - whole norm ===="
    ]
@@ -7461,6 +7463,7 @@
      "end_time": "2019-05-05T02:23:31.726106Z",
      "start_time": "2019-05-05T02:23:30.802257Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -7533,7 +7536,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T02:23:43.469648Z",
      "start_time": "2019-05-05T02:23:38.014026Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -7560,7 +7564,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T03:51:26.764263Z",
      "start_time": "2019-05-05T02:23:47.340342Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -7844,7 +7849,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T03:51:31.917225Z",
      "start_time": "2019-05-05T03:51:30.111359Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -13817,10 +13823,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-05T04:25:59.053203Z",
+     "start_time": "2019-05-05T04:25:55.396884Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([96, 3, 3, 3])\n",
+      "torch.Size([96, 3, 3, 3])\n",
+      "torch.Size([96, 96, 3, 3])\n",
+      "torch.Size([96, 96, 3, 3])\n",
+      "torch.Size([96, 96, 3, 3])\n",
+      "torch.Size([96, 96, 3, 3])\n",
+      "torch.Size([192, 96, 3, 3])\n",
+      "torch.Size([192, 96, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 1, 1])\n",
+      "torch.Size([192, 192, 1, 1])\n",
+      "torch.Size([10, 192, 1, 1])\n",
+      "torch.Size([10, 192, 1, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# np.save('c_loss_list_2.npy', np.asarray(loss_list))\n",
+    "# np.save('c_acc_list_2.npy', np.asarray(acc_list))\n",
+    "random_direction1 = []\n",
+    "random_direction2 = []\n",
+    "\n",
+    "for w in copy_of_the_weights:\n",
+    "    \n",
+    "    if w.dim() == 1: \n",
+    "        random_direction1.append(torch.zeros_like(w))\n",
+    "        random_direction2.append(torch.zeros_like(w))\n",
+    "        \n",
+    "    else:\n",
+    "        random_vector = w.clone().cpu().numpy()\n",
+    "        \n",
+    "        random_vector1 = random_vector - random_vector.mean((2,3),keepdims=True)\n",
+    "        random_vector2 = random_vector - random_vector.mean((0,1),keepdims=True)\n",
+    "        random_vector2 = np.transpose(random_vector2,(2,3,0,1))\n",
+    "        \n",
+    "        sigma1 = tf.matmul(tf.transpose(random_vector1,(0,1,3,2)),random_vector1) / random_vector1.shape[3]\n",
+    "        sigma2 = tf.matmul(tf.transpose(random_vector2,(0,1,3,2)),random_vector2) / random_vector2.shape[3]\n",
+    "\n",
+    "        s1,u1,v1 = tf.linalg.svd(sigma1,False)\n",
+    "        s2,u2,v2 = tf.linalg.svd(sigma2,False)\n",
+    "        \n",
+    "        tmp1 =  tf.matmul(u1,1/(tf.sqrt(tf.linalg.diag(s1))+1e-5))\n",
+    "        tmp1 = tmp1 @ tf.transpose(u1,(0,1,3,2))\n",
+    "        \n",
+    "        tmp2 =  tf.matmul(u2,1/(tf.sqrt(tf.linalg.diag(s2))+1e-5))\n",
+    "        tmp2 = tmp2 @ tf.transpose(u2,(0,1,3,2))\n",
+    "        \n",
+    "        random_vector1 = random_vector1 @ tf.transpose(tmp1,(0,1,3,2))\n",
+    "        random_vector2 = random_vector2 @ tf.transpose(tmp2,(0,1,3,2))\n",
+    "        random_vector2 = tf.transpose(random_vector2,(2,3,0,1))\n",
+    "        \n",
+    "        random_vector1 = torch.from_numpy(random_vector1.eval()).cuda()\n",
+    "        random_vector2 = torch.from_numpy(random_vector2.eval()).cuda()\n",
+    "\n",
+    "        w_norm  = w.view((w.shape[0],-1))  .norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "        d_norm1 = random_vector1.view((random_vector1.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "        d_norm2 = random_vector2.view((random_vector2.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "\n",
+    "        random_vector1 = random_vector1 * (w_norm/(d_norm1.cuda()+1e-10))\n",
+    "        random_vector2 = random_vector2 * (w_norm/(d_norm2.cuda()+1e-10))  \n",
+    "        \n",
+    "        print(random_vector1.shape)\n",
+    "        print(random_vector2.shape)\n",
+    "\n",
+    "        random_direction1.append(random_vector1)\n",
+    "        random_direction2.append(random_vector2)"
+   ]
   },
   {
    "cell_type": "code",
