Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13946,7 +13946,15 @@
      "start_time": "2019-05-05T04:26:11.571Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 0\tCoord: [-1. -1.]\t\tAcc: 11.363636363636363\tLoss: 62.495\n"
+     ]
+    }
+   ],
    "source": [
     "# start the evaluation\n",
     "loss_list = np.zeros((numebr_of_points,numebr_of_points)); acc_list  = np.zeros((numebr_of_points,numebr_of_points))\n",
