Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13868,7 +13868,11 @@
      "output_type": "stream",
      "text": [
       "count: 0\tCoord: [-1. -1.]\t\tAcc: 10.15625\tLoss: 653.13\n",
-      "Coord: [-0.9 -1. ]\tAcc: 13\tLoss: 421.747\r"
+      "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 11.008522727272727\tLoss: 274.251\n",
+      "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 10.440340909090908\tLoss: 145.379\n",
+      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 10.227272727272727\tLoss: 119.885\n",
+      "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 12.002840909090908\tLoss: 70.782\n",
+      "Coord: [-0.1 -1. ]\tAcc: 10\tLoss: 60.862\r"
      ]
     }
    ],
