--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13839,7 +13839,10 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T04:23:56.073695Z",
      "start_time": "2019-05-05T04:23:42.298627Z"
-    }
+    },
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [
     {
@@ -13961,7 +13964,16 @@
      "text": [
       "count: 0\tCoord: [-1. -1.]\t\tAcc: 10.866477272727273\tLoss: 2775.132\n",
       "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 9.659090909090908\tLoss: 658.408\n",
-      "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 10.653409090909092\tLoss: 224.907\n"
+      "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 10.653409090909092\tLoss: 224.907\n",
+      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 12.713068181818182\tLoss: 104.571\n",
+      "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 19.460227272727273\tLoss: 71.385\n",
+      "count: 10\tCoord: [ 0. -1.]\t\tAcc: 22.65625\tLoss: 63.429\n",
+      "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 20.880681818181817\tLoss: 69.462\n",
+      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 16.90340909090909\tLoss: 109.953\n",
+      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 14.630681818181818\tLoss: 195.618\n",
+      "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 12.642045454545455\tLoss: 375.613\n",
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 11.363636363636363\tLoss: 735.904\n",
+      "Coord: [-1.  -0.9]\tAcc: 8\tLoss: 1494.8377\r"
      ]
     }
    ],
