Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13872,7 +13872,11 @@
       "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 10.440340909090908\tLoss: 145.379\n",
       "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 10.227272727272727\tLoss: 119.885\n",
       "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 12.002840909090908\tLoss: 70.782\n",
-      "Coord: [-0.1 -1. ]\tAcc: 10\tLoss: 60.862\r"
+      "count: 10\tCoord: [ 0. -1.]\t\tAcc: 16.69034090909091\tLoss: 53.514\n",
+      "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 15.625\tLoss: 71.948\n",
+      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 13.991477272727273\tLoss: 96.701\n",
+      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 12.286931818181818\tLoss: 128.138\n",
+      "Coord: [ 0.8 -1. ]\tAcc: 14\tLoss: 204.026\r"
      ]
     }
    ],
