Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13956,7 +13956,9 @@
       "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 11.505681818181818\tLoss: 53.224\n",
       "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 14.346590909090908\tLoss: 53.157\n",
       "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 13.707386363636363\tLoss: 67.371\n",
-      "Coord: [-0.1 -1. ]\tAcc: 15\tLoss: 82.019\r"
+      "count: 10\tCoord: [ 0. -1.]\t\tAcc: 12.357954545454545\tLoss: 90.175\n",
+      "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 12.215909090909092\tLoss: 102.852\n",
+      "Coord: [ 0.3 -1. ]\tAcc: 14\tLoss: 103.937\r"
      ]
     }
    ],
