Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13979,7 +13979,9 @@
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 17.755681818181817\tLoss: 53.5\n",
       "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 24.71590909090909\tLoss: 44.228\n",
       "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 27.62784090909091\tLoss: 40.466\n",
-      "Coord: [ 0.2 -0.9]\tAcc: 27\tLoss: 47.402\r"
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 20.241477272727273\tLoss: 61.42\n",
+      "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 15.909090909090908\tLoss: 107.997\n",
+      "Coord: [ 0.6 -0.9]\tAcc: 25\tLoss: 134.158\r"
      ]
     }
    ],
