Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13880,7 +13880,11 @@
       "count: 20\tCoord: [ 1. -1.]\t\tAcc: 9.517045454545455\tLoss: 327.43\n",
       "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 10.369318181818182\tLoss: 332.749\n",
       "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 11.576704545454545\tLoss: 156.392\n",
-      "Coord: [-0.6 -0.9]\tAcc: 13\tLoss: 121.839\r"
+      "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 9.232954545454545\tLoss: 102.493\n",
+      "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 11.079545454545455\tLoss: 72.835\n",
+      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 15.411931818181818\tLoss: 41.807\n",
+      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 20.170454545454547\tLoss: 39.946\n",
+      "Coord: [ 0.2 -0.9]\tAcc: 21\tLoss: 44.572\r"
      ]
     }
    ],
