--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13960,7 +13960,9 @@
       "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 12.215909090909092\tLoss: 102.852\n",
       "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 12.002840909090908\tLoss: 103.349\n",
       "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 13.210227272727273\tLoss: 96.787\n",
-      "Coord: [ 0.7 -1. ]\tAcc: 19\tLoss: 95.558\r"
+      "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 13.28125\tLoss: 91.127\n",
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 13.707386363636363\tLoss: 86.725\n",
+      "Coord: [-1.  -0.9]\tAcc: 11\tLoss: 56.966\r"
      ]
     }
    ],
